--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,14 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
+.env.local
+.env.dev
+.env.development
+.env.test
+.env.prod
+.env.production
+
 
 # vercel
 .vercel
