--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ DATABASE_URL=postgresql://pguser:password@dbhost/dbname
 # Optional: Google OAuth (for social login)
 GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+
+# Resend
+RESEND_API_KEY="your-resend-api-key"
+EMAIL_SENDER_NAME="meffin"
+EMAIL_SENDER_ADDRESS="vercel.app"
