style: improved visibility

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Meffin - Budget Manager",
+  "name": "Meffin - Simple Monthly Budget Tracking",
   "short_name": "Meffin",
-  "description": "Track your income and expenses, organize by categories and keep control of your finances",
+  "description": "Simple, lightweight monthly budget tracking. Built for simplicity and self-hosting.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#10b981",
+  "theme_color": "#0f172a",
   "orientation": "portrait-primary",
   "categories": ["finance", "productivity", "business"],
   "lang": "en",
