--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,10 @@ jobs:
         run: npm run lint
 
       - name: Build
+        env:
+          DATABASE_URL: "postgresql://user:password@localhost:5432/mockdb"
+          BETTER_AUTH_SECRET: "mock-secret-for-build"
+          BETTER_AUTH_URL: "http://localhost:3000"
         run: npm run build
 
       - name: Extract version from tag
