--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "npm run db:migrate && next build --turbopack",
-    "build:safe": "npm run db:migrate:safe && next build --turbopack",
+    "build": "npm run db:push && next build --turbopack",
+    "build:safe": "npm run db:push || echo 'Schema sync failed - continuing with build' && next build --turbopack",
     "build:local": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
