--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "npm run db:push && next build --turbopack",
-    "build:safe": "npm run db:push || echo 'Schema sync failed - continuing with build' && next build --turbopack",
-    "build:local": "next build --turbopack",
+    "build": "npm run db:migrate && next build --turbopack",
     "start": "next start",
     "lint": "eslint",
     "type-check": "tsc --noEmit",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "tsx scripts/migrate.ts",
-    "db:migrate:reset": "tsx scripts/reset-migrations.ts",
+    "db:migrate": "tsx lib/db/migrate.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:check": "drizzle-kit check",
