--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/recurring-transactions",
-      "schedule": "0 9 * * *"
+      "schedule": "0 9 1 * *"
     }
   ]
 }
