--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,21 @@ jobs:
         run: |
           git config --local user.email "pereiraneveslucas@gmail.com"
           git config --local user.name "Lucas Neves Pereira"
+          
+          # Switch to main branch and pull latest changes
+          git checkout main
+          git pull origin main
+          
+          # Update version files again (in case main has moved forward)
+          echo "// This file is automatically updated by GitHub Actions on release" > lib/version.ts
+          echo "export const APP_VERSION = '${{ steps.version.outputs.VERSION }}';" >> lib/version.ts
+          npm version ${{ steps.version.outputs.VERSION }} --no-git-tag-version
+          
+          # Commit and push if there are changes
           git add lib/version.ts package.json
-          git commit -m "chore: update version to ${{ steps.version.outputs.VERSION }} [skip ci]" || exit 0
-          git push origin HEAD:main
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: update version to ${{ steps.version.outputs.VERSION }} [skip ci]"
+            git push origin main
+          fi
